# alfa

./: .black.toml  .coveragerc  .flake8  .gitignore  .isort.cfg  .ruff.toml  LICENSE  MANIFEST.in  README.md  alfa.py  config.py  db.py  initialize_db.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.toml  setup.cfg  setup.py
alfa/: __init__.py  app.py  config.py  db.py  logging.py  portfolio.py  util.py
alfa/sql/: create_tables.sql  drop_tables.sql
alpha/: __init__.py  db.py
sql/: create_tables.sql  drop_tables.sql
src/alfa/: __main__.py  config.py  db.py  log.py  portfolio.py  util.py  utils.py
src/alfa/sql/: create_tables.sql
tests/: conftest.py  test_create_directories_for_path.py  test_db.py  test_portfolio.py  test_price.py  test_stock.py  test_utils.py
