[build-system]
requires = ["setuptools>=80.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfa"
version = "0.0.1"
description = "A minimalist platform to run trading strategies."
authors = [{ name = "Mircea Avram", email = "mavram@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["yfinance>=0.2.50", "peewee>=3.17.8"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
urls = { Homepage = "https://github.com/mavram/alfa" }

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "build>=1.2.2",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "setuptools>=80.8.0",
]

[tool.black]
line-length = 150
target-version = ["py313"]
skip-string-normalization = false

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
fail_under = 100

[tool.flake8]
max-line-length = 150
exclude = [".venv", "__pycache__", "bin", "build", "lib"]

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = "--verbose --disable-warnings --cov=alfa --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
