[build-system]
requires = ["setuptools>=80.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfa"
version = "0.0.1"
description = "A minimalist platform to run trading strategies."
authors = [{ name = "Mircea Avram", email = "mavram@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["yfinance>=0.2.50", "peewee>=3.17.8"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
urls = { Homepage = "https://github.com/mavram/alfa" }

[project.optional-dependencies]
dev = [

    "build>=1.2.2",
    "ruff>=0.11.12",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "setuptools>=80.8.0",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
fail_under = 100

[tool.ruff]
line-length = 150
target-version = "py313"
exclude = [
    "__pycache__",
    ".pytest_cache",
    ".ropeproject",
    ".ruff_cache",
    ".venv",
    "bin",
    "build",
    "data",
    "lib",
    "tests",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors (Flake8)
    "W", # pycodestyle warnings (Flake8)
    "F", # Pyflakes (Flake8)
    "I", # isort
    "B", # flake8-bugbear (optional, for additional checks)
    # "D", # pydocstyle (optional, for docstring checks)
]
ignore = []

[tool.ruff.format]
quote-style = "double"            # Match Black's default
indent-style = "space"            # Match Black's default
skip-magic-trailing-comma = false # Match Black's trailing commas
line-ending = "lf"                # Match Black's default

[tool.ruff.lint.isort]
force-single-line = false # Match isort's multi_line_output = 3
combine-as-imports = true # Align with Black's style
lines-after-imports = 2   # Match Black's default

[tool.pytest.ini_options]
addopts = "--verbose --disable-warnings --cov=alfa --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
