[metadata]
name = alfa
version = 0.0.1
description = A minimalist platform for running trading strategies.
author = Mircea Avram
author_email = mavram@gmail.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mavram/alfa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.13
packages = find:
install_requires =
    yfinance>=0.2.50
    peewee>=3.17.8

[options.package_data]
* = *.txt, *.md
